# CMAS

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  comprehensive_cancer_report_draft.txt  config.example.yaml  expanded_cancer_overview.txt  expanded_cancer_research_overview.md  personality.yaml  pyproject.toml  requirements.txt  research_cancer_types_causes_2024.txt  research_data_sources.txt  setup.sh  start.sh
.claude/: settings.local.json
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
config/: agents.example.json  config.example.yaml  personality.example.yaml
reports/: cancer_overview.txt
src/cmas/: __init__.py  __main__.py  cli.py
src/cmas/channels/: __init__.py  discord_bot.py  web.py  whatsapp.py
src/cmas/core/: agent.py  brain.py  chat.py  composer.py  config.py  evaluation.py  gateway.py  llm.py  memory.py  metacognition.py  orchestrator.py  protocols.py  reasoning.py  scheduler.py  server.py  session.py  state.py  team.py  tools.py  vector.py
src/cmas/core/frameworks/: act.json  cbt.json  dbt.json  financial.json  stages_of_change.json
src/cmas/frameworks/: __init__.py  behavioral.json  conflict.json  goal_setting.json  nlp_framework.json  strategic.json
src/cmas/guardian/: __init__.py  __main__.py  daemon.py
src/cmas/web/: app.js  index.html  style.css
src/cmas/web-app/: package-lock.json  package.json
src/cmas/web-app/src/: App.jsx  index.css
tests/: conftest.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx
